# chain-rice

./: .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile.blockchain  Makefile  README.md  chain-rice.code-workspace  database-interfaces-guide.md  docker-bake.hcl  docker-compose.yml  frontend-setup-guide.md  go.mod  go.sum  readme.md
app/: app.go  app_config.go  ibc.go  sim_test.go
backend/: Dockerfile  package.json
backend/src/: index.js
cmd/chain-riced/: main.go
cmd/chain-riced/cmd/: commands.go  root.go  testnet.go  testnet_multi_node.go
cmd/chainrice/: main.go
cmd/chainrice/cmd/: commands.go  root.go  testnet.go  testnet_multi_node.go
docs/static/: openapi.yml
frontend/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Loading.tsx  Modal.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/styles/: globals.css
frontend/src/utils/: cn.ts
meowtopia/: DEVELOPMENT_SUMMARY.md  README.md
meowtopia/backend/: .env.development  CAFE_INTEGRATION_GUIDE.md  Dockerfile  Dockerfile.backend  README.md  SWAGGER_GUIDE.md  env.example  pyproject.toml  start_server.sh  test_cafe_api.py
meowtopia/backend/app/: main.py
meowtopia/backend/app/api/: __init__.py
meowtopia/backend/app/api/v1/: router.py
meowtopia/backend/app/api/v1/auth/: endpoints.py  models.py
meowtopia/backend/app/api/v1/endpoints/: auth.py  cafe.py  cats.py
meowtopia/backend/app/core/: __init__.py  auth.py  config.py  database.py
meowtopia/backend/app/models/: user.py
meowtopia/backend/scripts/: generate_types.py
meowtopia/contracts/: Cargo.toml  Makefile
meowtopia/contracts/mwt_dao_cw20/: Cargo.toml
meowtopia/contracts/mwt_dao_cw20/src/: lib.rs
meowtopia/contracts/mwt_dao_cw721/: Cargo.toml
meowtopia/contracts/mwt_token/: Cargo.toml
meowtopia/contracts/mwt_token/src/: error.rs  lib.rs  msg.rs  state.rs
meowtopia/frontend/mobile/: App.tsx  game.md  package.json
meowtopia/frontend/mobile/src/screens/: GameScreen.tsx
meowtopia/frontend/mobile/src/types/: api.ts
meowtopia/frontend/web/: Dockerfile  Dockerfile.web  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1749388509688-bba39ea39a312.mjs
meowtopia/frontend/web/public/: .webmanifest
meowtopia/frontend/web/public/docs/: index.md  lokale.md  roadmap.md
meowtopia/frontend/web/public/docs/compliance/: casp-license.md  export-crypto.md  iso-27001.md  iso-27701.md  pci-compliance.md  security-audit.md  ssl-info.md
meowtopia/frontend/web/public/docs/constitution/: culture.md  dyplomacy.md  education.md  money.md  religion.md  war.md
meowtopia/frontend/web/public/docs/legal/: developer-info.md  registration-info.md  third-party-licenses.md
meowtopia/frontend/web/public/docs/policies/: aml.md  cookies-consent.md  disclaimer.md  dpa.md  gdpr-impact.md  kyc.md  privacy.md  processors-list.md  terms.md  token-whitepaper.md
meowtopia/frontend/web/public/docs/webapp/: partner-contract.md  partner-panel-tos.md  user-privacy.md  user-tos.md
meowtopia/frontend/web/src/: App.tsx  global.ts
meowtopia/frontend/web/src/components/: AdminOnly.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Field.tsx  Message.tsx  Table.tsx  Title.tsx
meowtopia/frontend/web/src/components/styles/: index.ts
meowtopia/frontend/web/src/contexts/: AuthContext.tsx
meowtopia/frontend/web/src/layouts/: CookiesBanner.tsx  Navigation.tsx  User.tsx
meowtopia/frontend/web/src/layouts/components/: Button.tsx  Checkbox.tsx  Field.tsx  PasswordField.tsx
meowtopia/frontend/web/src/layouts/modules/: Cookies.tsx  Login.tsx  Register.tsx
meowtopia/frontend/web/src/layouts/styles/: authStyles.ts  mainStyles.ts
meowtopia/frontend/web/src/modules/accounting/: Accounting.tsx  README.md  config.ts  index.ts  types.ts  utils.ts
meowtopia/frontend/web/src/modules/accounting/pages/: Dashboard.tsx  DetailedAccounting.tsx  InvoiceDetails.tsx  InvoiceList.tsx  Payments.tsx
meowtopia/frontend/web/src/modules/auth/: Auth.tsx  styles.ts  utils.ts
meowtopia/frontend/web/src/modules/auth/configs/: api.ts  general.ts  pages.ts
meowtopia/frontend/web/src/modules/auth/interfaces/: api.ts  general.ts  index.ts  pages.ts  styles.ts
meowtopia/frontend/web/src/modules/auth/pages/: ForgotPassword.tsx  Login.tsx  Register.tsx  ResetPassword.tsx
meowtopia/frontend/web/src/modules/docs/: Docs.tsx  docsTypes.ts
meowtopia/frontend/web/src/modules/storage/: Storage.tsx  utils.ts
meowtopia/frontend/web/src/modules/storage/configs/: api.ts  general.ts  pages.ts
meowtopia/frontend/web/src/modules/storage/interfaces/: api.ts  general.ts  index.ts  pages.ts
meowtopia/frontend/web/src/pages/: Auth.tsx  Docs.tsx  LoginPage.tsx
meowtopia/frontend/web/src/types/interfaces/: ButtonInterface.ts  CheckboxInterface.ts  FieldInterface.ts  RouteInterface.ts
meowtopia/frontend/web/src/types/routes/: authRoutes.ts  docsRoutes.ts  routes.ts
mobile-backend/: Dockerfile  package.json
mobile/android/app/: build.gradle.kts
mobile/ios/ChainRiceMobile.xcodeproj/: project.pbxproj
proto/chainrice/chainrice/module/v1/: module.proto
proto/chainrice/chainrice/v1/: genesis.proto  params.proto  query.proto  tx.proto
scripts/: colored-logs.sh  open-interfaces.sh  run-tests.sh  start-all.sh  start-blockchain.sh  start-mobile.sh  start-web.sh
web-frontend/: Dockerfile  package.json  vite.config.js
x/chainrice/keeper/: genesis.go  genesis_test.go  keeper.go  keeper_test.go  msg_server.go  msg_update_params.go  msg_update_params_test.go  query.go  query_params.go  query_params_test.go
x/chainrice/module/: autocli.go  depinject.go  module.go  simulation.go
x/chainrice/types/: errors.go  genesis.pb.go  genesis_test.go  keys.go  module.pb.go  params.pb.go  query.pb.go  query.pb.gw.go  tx.pb.go
