[tool.poetry]
name = "meowtopia-backend"
version = "0.1.0"
description = "Backend API for Meowtopia virtual cat universe"
authors = ["Meowtopia Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
pydantic = {extras = ["email"], version = "^2.4.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-decouple = "^3.8"
redis = "^5.0.0"
celery = "^5.3.0"
websockets = "^11.0.3"
httpx = "^0.25.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
faker = "^19.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true