[package]
name = "mwt_dao_cw721"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
cosmwasm-storage = "1.5"
cw-storage-plus = "1.5"
cw2 = "1.5"
cw721-base = "0.21"
cw721 = "0.21"
cw-controllers = "0.21"
cw-utils = "0.21"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
cw-multi-test = "0.21"

[dev-dependencies]
cw-multi-test = "0.21" 