[package]
name = "mwt-token"
version = "0.1.0"
authors = ["Meowtopia Team"]
edition = "2021"
description = "MWT Token - The native currency for Meowtopia ecosystem"
license = "MIT"
repository = "https://github.com/meowtopia/contracts"
homepage = "https://meowtopia.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.4"
cosmwasm-std = "1.4"
cosmwasm-storage = "1.4"
cw-storage-plus = "1.1"
cw2 = "1.1"
cw20 = "1.1"
cw20-base = { version = "1.1", features = ["library"] }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
cw-multi-test = "0.18"
cosmwasm-vm = { version = "1.4", default-features = false }

[[bin]]
name = "schema"
required-features = ["schema"]